# exit-with-code

./: .gitignore  Cargo.toml  README.md
src/: main.rs
tests/: exit_failure.rs  exit_success.rs  exit_undefined.rs
